# corvin

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-postgres-dev.yml  docker-compose-postgres.yml  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: backend-lint.yml  backend-test.yml  docker-build.yml  frontend-lint.yml
app/: __init__.py  task_queue.py  tasks.py
app/models/: __init__.py  history.py  profile.py  task.py  video.py  video_list.py
app/routes/: __init__.py  history.py  lists.py  profiles.py  tasks.py  videos.py
app/services/: __init__.py  history_service.py  ytdlp_service.py
backend/: .dockerignore  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  run.py
backend/app/: __init__.py  extensions.py  metrics.py  run.py  sse_hub.py  sse_stream.py  task_queue.py  tasks.py
backend/app/core/: __init__.py  constants.py  exceptions.py  helpers.py  logging.py  validators.py
backend/app/models/: __init__.py  download_schedule.py  history.py  profile.py  settings.py  task.py  video.py  video_list.py
backend/app/routes/: __init__.py  errors.py  history.py  lists.py  notifications.py  profiles.py  progress.py  schedules.py  settings.py  tasks.py  videos.py
backend/app/schemas/: common.py  history.py  lists.py  notifications.py  profiles.py  schedules.py  settings.py  tasks.py  videos.py
backend/app/services/: __init__.py  history_service.py  progress_service.py  ytdlp_service.py
backend/app/services/notifications/: __init__.py  discord.py  gotify.py  jellyfin.py  notifier.py  ntfy.py  plex.py  registry.py  service.py  slack.py
backend/migrations/: README.md  alembic.ini  env.py  script.py.mako
backend/scripts/: populate_db.py  seed_test_data.py
backend/tests/: conftest.py  test_blacklist.py  test_core_exceptions.py  test_core_helpers.py  test_core_logging.py  test_core_validators.py  test_data_retention.py  test_errors.py  test_extensions.py  test_history.py  test_integration.py  test_lists.py  test_models.py  test_notifications.py  test_profiles.py  test_progress.py  test_progress_service.py  test_schedules.py  test_services_history.py  test_services_ytdlp.py  test_settings.py  test_sse_hub.py  test_sse_stream.py  test_task_execution.py  test_task_functions.py  test_task_queue.py  test_tasks.py  test_tasks_execution.py  test_videos.py
frontend/: .prettierrc  Caddyfile  Dockerfile  Dockerfile.dev  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/lists/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/components/: BlacklistedBadge.tsx  BulkListForm.tsx  DownloadProgress.tsx  EmptyState.tsx  ExtractorIcon.tsx  FormField.tsx  ListForm.tsx  ListOptionsFields.tsx  MediaTypeBadge.tsx  Pagination.tsx  Select.tsx  Sidebar.tsx  TaskStatusIcon.tsx  ToggleOption.tsx  VideoLabels.tsx  VideoThumbnail.tsx  sidebar.tsx
frontend/src/lib/: ProgressContext.tsx  api.ts  text.ts  useDownloadProgress.ts  useEventSource.ts  useFormValidation.ts  useVideoListStream.ts  utils.ts  validation.ts
(+4 files in other folders)
