[tool.poetry]
name = "corvin"
version = "0.1.0"
description = "A self‑hosted media ingestion and archiving tool"
authors = ["dsgnr"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1"
flask-sqlalchemy = "^3.1"
flask-migrate = "^4.1"
flask-cors = "^4.0"
yt-dlp = "^2025.12.8"
apscheduler = "^3.11"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9"
pytest-flask = "^1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
