[project]
name = "corvin"
version = "0.1.0"
description = "A self‑hosted media ingestion and archiving tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask-openapi3[scalar]>=4.0",
    "flask-sqlalchemy>=3.1",
    "flask-migrate>=4.1",
    "flask-cors>=4.0",
    "pydantic>=2.0",
    "yt-dlp>=2025.12.8",
    "apscheduler>=3.11",
    "gunicorn>=23.0.0",
    "gevent>=24.0",
    "prometheus-flask-exporter>=0.23",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-flask>=1.3",
    "ruff>=0.14.13",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
